Fixed the parallax not working well on small screens

--- a/yawyt/main/static/css/result.css
+++ b/yawyt/main/static/css/result.css
@@ -9,7 +9,7 @@
 	position: fixed;
 	top: 0;
 	z-index: -10;
-	width:100%;
+	width:120%;
 }
 
 #s0
@@ -19,14 +19,14 @@
 
 #s1
 {
-	height:1500px;
-	background-size: 100%;
+	height:2000px;
+	background-size: 120%;
 }
 
 #s2
 {
 	height:1000px;
-	background-size: 100%;
+	background-size: 120%;
 }
 
 .tweet
